@@ -10,7 +10,7 @@ monitoring connected Windows CE based devices.
 .SH OPTIONS
 .TP
 .B \-f
-Run in foreground (Don't detach from terminal).
+Run in foreground (Don't detach from terminal), session manager no restart.
 .TP
 .B \-d level
 Set debug log level: 0 - No logging, 1 - Errors only (default), 2 - Errors and warnings, 3 - Everything.
