@@ -1,3 +1,8 @@
+2007-10-17  Mark Ellis <mark@mpellis.org.uk>
+
+	* set session manager not to restart us if
+	   running in foreground, thanks to Iain Buchanan
+
 2007-10-16  Mark Ellis <mark@mpellis.org.uk>
 
 	* bugfixes for failed rapi connection
